--- a/frontend/src/styles/Whiteboard.scss
+++ b/frontend/src/styles/Whiteboard.scss
@@ -1,1 +1,146 @@
-#Whiteboard {}
+#Whiteboard {
+    #top-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1rem;
+        width: 800px;
+        margin: 0 auto;
+        padding-bottom: 2.5rem;
+
+        #right {
+            display: flex;
+            gap: 0.4rem;
+            align-items: center;
+        }
+
+        .icon {
+            background-color: black;
+            color: white;
+            border-radius: 1.7rem;
+            font-size: 1.2rem;
+            padding: 0.4rem 0.7rem;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #333;
+            }
+        }
+    }
+}
+
+#Canvas {
+    width: min-content;
+    position: relative;
+    margin: 0 auto;
+
+    #settings {
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem;
+
+        background-color: #1d1d21;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+
+    canvas {
+        border: 2px solid black;
+        image-rendering: pixelated;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+
+    #colors {
+        display: flex;
+        gap: 0.5rem;
+    }
+
+    .color {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+        cursor: pointer;
+
+        transition-duration: 0.3s;
+
+        position: relative;
+        top: 0.2rem;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+
+        &.selected {
+            top: -0.2rem;
+        }
+    }
+
+    #pen-dropdown {
+        #dropdown-btn {
+            border-radius: 50%;
+            width: 3rem;
+            height: 3rem;
+            position: relative;
+
+            &::before {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            &::after {
+                display: none;
+            }
+        }
+
+        ul {
+            background-color: transparent;
+            border: none;
+            pointer-events: none;
+
+            &.show {
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+                width: 3rem;
+                align-items: end;
+            }
+
+            li {
+                pointer-events: auto;
+                cursor: pointer;
+                // display: inline-block;
+                background-color: white;
+                border: 1px solid black;
+                width: 3rem;
+                height: 3rem;
+                border-radius: 50%;
+
+                position: relative;
+
+                transition-duration: 0.3s;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+
+                .inner {
+                    // border: 1px solid black;
+                    background-color: black;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    border-radius: 50%;
+
+                    // min-width: 5%;
+                    // max-width: 90%;
+                    // min-height: 5%;
+                    // max-height: 90%;
+                }
+            }
+        }
+    }
+}
